--- a/AppListaCurso/app/src/main/res/layout/activity_main.xml
+++ b/AppListaCurso/app/src/main/res/layout/activity_main.xml
@@ -7,51 +7,49 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/editTextTelefone"
         android:layout_width="380dp"
         android:layout_height="66dp"
         android:layout_margin="16dp"
         android:layout_marginTop="36dp"
         android:ems="10"
-        android:hint="Telefone"
+        android:hint="@string/txt_edit_telefone"
         android:inputType="textPersonName"
-        android:text="Telefone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextNomeCurso"
+        android:importantForAutofill="no" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/editTextNomeCurso"
         android:layout_width="382dp"
         android:layout_height="60dp"
         android:layout_margin="16dp"
         android:ems="10"
-        android:hint="Nome do Curso"
+        android:hint="@string/txt_edit_nome_curso"
         android:inputType="textPersonName"
-        android:text="Nome do Curso"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextSobrenome" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/editTextSobrenome"
         android:layout_width="380dp"
         android:layout_height="61dp"
         android:layout_margin="16dp"
         android:ems="10"
-        android:hint="Sobrenome"
+        android:hint="@string/txt_edit_sobrenome"
         android:inputType="textPersonName"
-        android:text="Sobrenome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/editPrimeiroNome" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Aplicativo Lista Vip Curso Android"
-        android:textColor="#121111"
+        android:text="@string/txt_titulo"
+        android:textColor="#009688"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,14 +59,13 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/editPrimeiroNome"
         android:layout_width="383dp"
         android:layout_height="67dp"
         android:layout_margin="16dp"
         android:ems="10"
-        android:hint="Primeiro Nome"
+        android:hint="@string/txt_edit_primeiro_nome"
         android:inputType="textPersonName"
-        android:text="Primeiro Nome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -80,12 +77,12 @@
         android:layout_marginStart="16dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="@color/CorBotoes"
-        android:text="Limpar"
+        android:text="@string/txt_button_limpar"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone"
         app:layout_constraintVertical_bias="0.597" />
 
     <Button
@@ -95,10 +92,10 @@
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="@color/CorBotoes"
-        android:text="Salvar"
+        android:text="@string/txt_button_Salvar"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone"
         app:layout_constraintVertical_bias="0.646" />
 
     <Button
@@ -108,11 +105,11 @@
         android:layout_margin="16dp"
         android:layout_marginBottom="104dp"
         android:backgroundTint="@color/CorBotoes"
-        android:text="Finalizar"
+        android:text="@string/txt_button_finalizar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
